--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,32 @@ body {
   font-family: sans-serif;
 }
 
+button {
+  background-color: #2fa38d;
+  color: #fff;
+  border: none;
+  border-radius: 10%;
+  padding: 0.75rem;
+  font-weight: bold;
+}
+
+button:hover {
+  background-color: #8db38b;
+}
+
+.button-with-arrow {
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+}
+
+/* Navbar */
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 2rem;
+  font-weight: bold;
 }
 
 .brand-logo img {
@@ -36,18 +57,6 @@ body {
   color: #56876d;
 }
 
-.navbar-end-button button {
-  background-color: #2fa38d;
-  color: #fff;
-  border: none;
-  border-radius: 10%;
-  padding: 0.5rem;
-}
-
-.navbar-end-button button:hover {
-  background-color: #8db38b;
-}
-
 .hamburger-menu {
   position: absolute;
   right: 1rem;
@@ -64,6 +73,27 @@ body {
   background-color: #2fa38d;
   width: 100%;
   height: 3px;
+}
+
+/* Hero */
+
+.hero-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+  background-size: cover;
+  background-image: url(./assets/hero-image.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  color: #fff;
 }
 
 @media (max-width: 900px) {
